fix(move): Preserve execution order
Keep filtered selections and transformation maps ordered so overlapping moves do not break dependent blocks.